8-sidecar.yml
apiVersion: v1
kind: Pod
metadata:
  name: sidecar-app
spec:
  containers:
    - name: app
      image: nginx
      volumeMounts:
        - name: shared
          mountPath: /data
    - name: logger
      image: busybox
      command: ["sh","-c","tail -f /data"]
  volumes:
    - name: shared
      emptyDir: {}
