1-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web-svc
  namespace: web-ns
spec:
  selector:
    app: frontend-app
  ports:
    - port: 80
      targetPort: 80
